<resources>
    <string name="app_name">Tasbih</string>
    <string name="app_version">2.1.0</string>
    <string name="company_name" translatable="false">AspiraSoft</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-6293532072634065~5243770836</string>
    <string name="app_id" translatable="false">5243770836</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-6293532072634065/4510334430</string>

    <string name="title_counters">Tasbih</string>

    <string name="desc_logo">Logo</string>
    <string name="desc_drawer_type">Drawer type</string>

    <string name="placeholder_memo">No description added.</string>

    <string name="label_add">Add</string>x
    <string name="label_add_description">Create Tasbih</string>

    <string name="label_name">Title</string>
    <string name="label_name_description">Name of the Tasbih.</string>

    <string name="label_memo">Description (Optional)</string>
    <string name="label_memo_description">e.g. origins of this Tasbih, its benefits, how many times it should be recited, or other relevant notes, etc.</string>

    <string name="hint_delete">Delete</string>
    <string name="hint_reset">Reset</string>

    <string name="confirmation_prompt">Are you sure?</string>
    <string name="delete_confirmation">Do you really want to delete the counter? Proceed with caution. This action is permanent.</string>
    <string name="reset_confirmation">This action would reset the counter value. Proceed with caution.</string>

    <string name="label_finished" translatable="false">%1$d</string>

    <string name="counter1_name" translatable="false">الحمد لله</string>
    <string name="dua1_ar">الحمد لله</string>
    <string name="dua1_ar_en" translatable="false">Alhamdulilah</string>
    <string name="dua1_en">All the praises and thanks be to Allah</string>
    <string name="duu1_source" translatable="false">()</string>

    <string name="counter2_name" translatable="false">سبحان الله</string>
    <string name="dua2_ar">سبحان الله</string>
    <string name="dua2_ar_en" translatable="false">Subhan Allah</string>
    <string name="dua2_en">Exalted is Allah above what they describe, except the chosen servants of Allah [who do not share in that sin]</string>
    <string name="dua2_source" translatable="false">(Quran, 37:159–160)</string>

    <string name="counter3_name" translatable="false">الله أكبر</string>
    <string name="dua3_ar">الله أكبر</string>
    <string name="dua3_ar_en" translatable="false">Allahu Akbar</string>
    <string name="dua3_en">Allah is the Greatest</string>
    <string name="dua3_source" translatable="false">()</string>

    <string name="counter4_name">بسم الله</string>
    <string name="dua4_ar" translatable="false">بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيمِ</string>
    <string name="dua4_ar_en" translatable="false">Bismillah ir rahman ir rahimِ</string>
    <string name="dua4_en" translatable="false">In the name of God, the Most Gracious, the Most Merciful</string>
    <string name="dua4_source" translatable="false">()</string>

    <string name="counter5_name">درود إبراهيمي</string>
    <string name="dua5_ar">اللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَعَلَى آلِ مُحَمَّدٍ.
كَمَا صَلَّيْتَ عَلَى إِبْرَاهِيمَ وَعَلَى آلِ إِبْرَاهِيمَ.
.إِنَّكَ حَمِيدٌ مَجِيدٌ.
اللَّهُمَّ بَارِكْ عَلَى مُحَمَّدٍ، وَعَلَى آلِ مُحَمَّدٍ.
كَمَا بَارَكْتَ عَلَى إِبْرَاهِيمَ وَعَلَى آلِ إِبْرَاهِيمَ.
.إِنَّكَ حَمِيدٌ مَجِيدٌ.</string>
    <string name="dua5_ar_en" translatable="false">Allahumma Sal\'lee \'Ala Muhammadiu
Wa \'Ala Alee Muhammadin
Kama Sal\’lay\’ta \'Ala Ibrahima
Wa \'Ala Alee Ibrahima,
Innaka Hammidum Majeed.

Allahumma Ba\’rik \'Ala Muhammadiu
Wa \'Ala Alee Muhammadin
Kama Ba\’rak\’ta \'Ala Ibrahima
Wa \'Ala Alee Ibrahima,
Innaka Hammidum Majeed.</string>
    <string name="dua5_en" translatable="false">O Allah! Shower blessings upon Muhammad (S.A.W)
and on the family of Muhammad (S.A.W)
as you showered blessings upon Ibrahim (A.S)
and on the family of Ibrahim (A.S),
Surely, You are the Praiseworthy, Glorious.

O Allah! Bestow favours upon Muhammad(S.A.W)
and on the family of Muhammad (S.A.W)
as You bestowed favours on Ibrahim (A.S)
and on the family of Ibrahim (A.S),
Surely, You are the Praiseworthy, Glorious.</string>
    <string name="dua5_source" translatable="false">(Bukhari Vol. 3, 60/320)</string>

    <string name="counter6_name">آية الكرسي</string>
    <string name="dua6_ar">اللّهُ لاَ إِلَـهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهم وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ</string>
    <string name="dua6_ar_en" translatable="false">Allahu laaa ilaaha illaa huwal haiyul qai-yoom; laa taakhuzuhoo sinatunw wa laa nawm; lahoo maa fissamaawaati wa maa fil ard; man zallazee yashfa\'u indahooo illaa be iznih; ya\'lamu maa baina aideehim wa maa khalfahum; wa laa yuheetoona beshai \'immin \'ilmihee illa be maa shaaaa; wasi\'a kursiyyuhus samaa waati wal arda wa la ya\'ooduho hifzuhumaa; wa huwal aliyyul \'azeem</string>
    <string name="dua6_en" translatable="false">Allah! There is no god but He - the Living, The Self-subsisting, Eternal. No slumber can seize Him Nor Sleep. His are all things In the heavens and on earth. Who is there can intercede In His presence except As he permitteth? He knoweth What (appeareth to His creatures As) Before or After or Behind them. Nor shall they compass Aught of his knowledge Except as He willeth. His throne doth extend Over the heavens And on earth, and He feeleth No fatigue in guarding And preserving them, For He is the Most High. The Supreme (in glory).</string>
    <string name="dua6_source" translatable="false">(Quran, 2:255)</string>

    <string name="counter7_name">سُّورَةُ الْفَاتِحَة‎</string>
    <string name="dua7_ar">ٱلْحَمْدُ لِلَّهِ رَبِّ الْعَالَمِينَ. ٱلرَّحْمَٰنِ ٱلرَّحِيمِ. مٰالِكِ يَوْمِ ٱلدِّينِ. إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ. ٱهْدِنَا الصِّرَاطَ ٱلْمُسْتَقِيمَ. صِرَاطَ ٱلَّذِينَ أَنْعَمْتَ عَلَيْهِمْ غَيْرِٱلْمَغْضُوبِ عَلَيْهِمْ وَلَا ٱلضَّآلِّين</string>
    <string name="dua7_ar_en" translatable="false">Bismillaah ar-Rahman ar-Raheem
Al hamdu lillaahi rabbil \'alameen
Ar-Rahman ar-Raheem Maaliki yaumid Deen
Iyyaaka na\'abudu wa iyyaaka nasta\'een
Ihdinas siraatal mustaqeem
Siraatal ladheena an \'amta\' alaihim
Ghairil maghduubi\' alaihim waladaaleen</string>
    <string name="dua7_en" translatable="false">In the name of God, the infinitely Compassionate and Merciful.
Praise be to God, Lord of all the worlds.
The Compassionate, the Merciful. Ruler on the Day of Reckoning.
You alone do we worship, and You alone do we ask for help.
Guide us on the straight path,
the path of those who have received your grace;
not the path of those who have brought down wrath, nor of those who wander astray.</string>
    <string name="dua7_source" translatable="false">(Quran, 1)</string>

    <string name="counter8_name">سورة الإخلاص</string>
    <string name="dua8_ar">قُلْ هُوَ ٱللَّهُ أَحَدٌ. ٱللَّهُ ٱلصَّمَدُ. لَمْ يَلِدْ وَلَمْ يُولَدْ. وَلَمْ يَكُن لَّهُۥ كُفُوًا أَحَدٌۢ</string>
    <string name="dua8_ar_en" translatable="false">Bismillaah ar-Rahman ar-Raheem
Qul huwallaahu ahad
Allahus samad
Lam yalid wa lam yuulad
Wa lamyakun lahuuu kufuwan ahad</string>
    <string name="dua8_en" translatable="false">In the name of Allah, the Beneficent, the Merciful.
Say: He is Allah, the One.
He is Allah, the Eternal,
Who was never born, nor ever gave birth.
The One beyond compare.</string>
    <string name="dua8_source" translatable="false">(Quran, 112)</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

</resources>