<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_counter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pk.aspirasoft.tasbih.scenes.CreateCounter">

    <android.support.v7.widget.Toolbar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:layout_alignParentTop="true">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="10dp"
        android:layout_below="@+id/actionBar"
        android:orientation="vertical"
        android:background="#fff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:textColor="#000"
            android:text="@string/label_name"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name_description"
            android:maxLines="1"
            android:background="#fff"
            android:textColor="#000"
            android:textColorHint="#555"
            android:inputType="text"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:textColor="#000"
            android:text="@string/label_memo"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:hint="@string/label_memo_description"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:background="#fff"
            android:textColor="#000"
            android:textColorHint="#555"
            android:padding="5dp"/>

    </LinearLayout>

</RelativeLayout>