<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:ads="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   ads:cardCornerRadius="4dp"
                                                   ads:cardUseCompatPadding="true"
                                                   ads:contentPadding="16dp"
                                                   ads:strokeColor="?attr/colorPrimaryDark"
                                                   ads:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="Title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ar"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/dua8_ar"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="256dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#440097A7" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ar_en"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/dua8_ar_en"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/en"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/dua8_en"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/show_translation"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_translate"
                android:tint="@android:color/darker_gray" />

            <ImageButton
                android:id="@+id/show_transliteration"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_transliterate"
                android:tint="@android:color/darker_gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/source"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dua8_source" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>